--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http: ^0.13.5
   flutter_blue: ^0.8.0
   device_info_plus: ^4.1.2
+  fl_chart: ^0.55.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/IDB-logos_black.png
+    - assets/IDB-logos_transparent.png
+    - assets/IDB-logos_white.png
+    - assets/IDB-logos.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
